--- a/scholar.yaml
+++ b/scholar.yaml
@@ -1,79 +1,79 @@
 payload:
-  - DOMAIN-SUFFIX,ncbi.nlm.nih.gov, DIRECT
-  - DOMAIN-SUFFIX,ebi.ac.uk, DIRECT
-  - DOMAIN-SUFFIX,cnki, DIRECT
-  - DOMAIN-SUFFIX,science.org, DIRECT
-  - DOMAIN-SUFFIX,sciencedirect.com, DIRECT
-  - DOMAIN-SUFFIX,cell.com, DIRECT
-  - DOMAIN-SUFFIX,nature.com, DIRECT
-  - DOMAIN-SUFFIX,plos.org, DIRECT
-  - DOMAIN-SUFFIX,pnas.org, DIRECT
-  - DOMAIN-SUFFIX,springer.com, DIRECT
-  - DOMAIN-SUFFIX,springerlink.com, DIRECT
-  - DOMAIN-SUFFIX,webofscience.com, DIRECT
-  - DOMAIN-SUFFIX,oxfordartonline.com, DIRECT
-  - DOMAIN-SUFFIX,oxfordbibliographies.com, DIRECT
-  - DOMAIN-SUFFIX,oxfordmusiconline.com, DIRECT
-  - DOMAIN-SUFFIX,elifesciences.org, DIRECT
-  - DOMAIN-SUFFIX,academic.oup.com, DIRECT
-  - DOMAIN-SUFFIX,biomedcentral.com, DIRECT
-  - DOMAIN-SUFFIX,cambridge.org, DIRECT
-  - DOMAIN-SUFFIX,elsevier.com, DIRECT
-  - DOMAIN-SUFFIX,frontiersin.org, DIRECT
-  - DOMAIN-SUFFIX,ieee.org, DIRECT
-  - DOMAIN-SUFFIX,acm.org, DIRECT
-  - DOMAIN-SUFFIX,acs.org, DIRECT
-  - DOMAIN-SUFFIX,aip.org, DIRECT
-  - DOMAIN-SUFFIX,ams.org, DIRECT
-  - DOMAIN-SUFFIX,annualreviews.org, DIRECT
-  - DOMAIN-SUFFIX,aps.org, DIRECT
-  - DOMAIN-SUFFIX,ascelibrary.org, DIRECT
-  - DOMAIN-SUFFIX,asm.org, DIRECT
-  - DOMAIN-SUFFIX,asme.org, DIRECT
-  - DOMAIN-SUFFIX,astm.org, DIRECT
-  - DOMAIN-SUFFIX,bmj.com, DIRECT
-  - DOMAIN-SUFFIX,cas.org, DIRECT
-  - DOMAIN-SUFFIX,cdnsciencepub.com, DIRECT
-  - DOMAIN-SUFFIX,clarivate.com, DIRECT
-  - DOMAIN-SUFFIX,cshlp.org, DIRECT
-  - DOMAIN-SUFFIX,csiro.au, DIRECT
-  - DOMAIN-SUFFIX,ebscohost.com, DIRECT
-  - DOMAIN-SUFFIX,emerald.com, DIRECT
-  - DOMAIN-SUFFIX,ems-ph.org, DIRECT
-  - DOMAIN-SUFFIX,engineeringvillage.com, DIRECT
-  - DOMAIN-SUFFIX,icevirtuallibrary.com, DIRECT
-  - DOMAIN-SUFFIX,imf.org, DIRECT
-  - DOMAIN-SUFFIX,iop.org, DIRECT
-  - DOMAIN-SUFFIX,jamanetwork.com, DIRECT
-  - DOMAIN-SUFFIX,jhu.edu, DIRECT
-  - DOMAIN-SUFFIX,jstor.org, DIRECT
-  - DOMAIN-SUFFIX,karger.com, DIRECT
-  - DOMAIN-SUFFIX,libguides.com, DIRECT
-  - DOMAIN-SUFFIX,liebertpub.com, DIRECT
-  - DOMAIN-SUFFIX,madsrevolution.net, DIRECT
-  - DOMAIN-SUFFIX,mathjournals.org, DIRECT
-  - DOMAIN-SUFFIX,mdpi.com, DIRECT
-  - DOMAIN-SUFFIX,mpg.de, DIRECT
-  - DOMAIN-SUFFIX,msp.org, DIRECT
-  - DOMAIN-SUFFIX,myilibrary.com, DIRECT
-  - DOMAIN-SUFFIX,oecd-ilibrary.org, DIRECT
-  - DOMAIN-SUFFIX,osapublishing.org, DIRECT
-  - DOMAIN-SUFFIX,oup.com, DIRECT
-  - DOMAIN-SUFFIX,ovid.com, DIRECT
-  - DOMAIN-SUFFIX,projecteuclid.org, DIRECT
-  - DOMAIN-SUFFIX,proquest.com, DIRECT
-  - DOMAIN-SUFFIX,rsc.org, DIRECT
-  - DOMAIN-SUFFIX,sagepub.com, DIRECT
-  - DOMAIN-SUFFIX,sciencemag.org, DIRECT
-  - DOMAIN-SUFFIX,scopus.com, DIRECT
-  - DOMAIN-SUFFIX,siam.org, DIRECT
-  - DOMAIN-SUFFIX,spiedigitallibrary.org, DIRECT
-  - DOMAIN-SUFFIX,springernature.com, DIRECT
-  - DOMAIN-SUFFIX,tandfonline.com, DIRECT
-  - DOMAIN-SUFFIX,un.org, DIRECT
-  - DOMAIN-SUFFIX,uni-bielefeld.de, DIRECT
-  - DOMAIN-SUFFIX,webofknowledge.com, DIRECT
-  - DOMAIN-SUFFIX,westlaw.com, DIRECT
-  - DOMAIN-SUFFIX,wiley.com, DIRECT
-  - DOMAIN-SUFFIX,worldbank.org, DIRECT
-  - DOMAIN-SUFFIX,worldscientific.com, DIRECT
+  - DOMAIN-SUFFIX,ncbi.nlm.nih.gov
+  - DOMAIN-SUFFIX,ebi.ac.uk
+  - DOMAIN-SUFFIX,cnki
+  - DOMAIN-SUFFIX,science.org
+  - DOMAIN-SUFFIX,sciencedirect.com
+  - DOMAIN-SUFFIX,cell.com
+  - DOMAIN-SUFFIX,nature.com
+  - DOMAIN-SUFFIX,plos.org
+  - DOMAIN-SUFFIX,pnas.org
+  - DOMAIN-SUFFIX,springer.com
+  - DOMAIN-SUFFIX,springerlink.com
+  - DOMAIN-SUFFIX,webofscience.com
+  - DOMAIN-SUFFIX,oxfordartonline.com
+  - DOMAIN-SUFFIX,oxfordbibliographies.com
+  - DOMAIN-SUFFIX,oxfordmusiconline.com
+  - DOMAIN-SUFFIX,elifesciences.org
+  - DOMAIN-SUFFIX,academic.oup.com
+  - DOMAIN-SUFFIX,biomedcentral.com
+  - DOMAIN-SUFFIX,cambridge.org
+  - DOMAIN-SUFFIX,elsevier.com
+  - DOMAIN-SUFFIX,frontiersin.org
+  - DOMAIN-SUFFIX,ieee.org
+  - DOMAIN-SUFFIX,acm.org
+  - DOMAIN-SUFFIX,acs.org
+  - DOMAIN-SUFFIX,aip.org
+  - DOMAIN-SUFFIX,ams.org
+  - DOMAIN-SUFFIX,annualreviews.org
+  - DOMAIN-SUFFIX,aps.org
+  - DOMAIN-SUFFIX,ascelibrary.org
+  - DOMAIN-SUFFIX,asm.org
+  - DOMAIN-SUFFIX,asme.org
+  - DOMAIN-SUFFIX,astm.org
+  - DOMAIN-SUFFIX,bmj.com
+  - DOMAIN-SUFFIX,cas.org
+  - DOMAIN-SUFFIX,cdnsciencepub.com
+  - DOMAIN-SUFFIX,clarivate.com
+  - DOMAIN-SUFFIX,cshlp.org
+  - DOMAIN-SUFFIX,csiro.au
+  - DOMAIN-SUFFIX,ebscohost.com
+  - DOMAIN-SUFFIX,emerald.com
+  - DOMAIN-SUFFIX,ems-ph.org
+  - DOMAIN-SUFFIX,engineeringvillage.com
+  - DOMAIN-SUFFIX,icevirtuallibrary.com
+  - DOMAIN-SUFFIX,imf.org
+  - DOMAIN-SUFFIX,iop.org
+  - DOMAIN-SUFFIX,jamanetwork.com
+  - DOMAIN-SUFFIX,jhu.edu
+  - DOMAIN-SUFFIX,jstor.org
+  - DOMAIN-SUFFIX,karger.com
+  - DOMAIN-SUFFIX,libguides.com
+  - DOMAIN-SUFFIX,liebertpub.com
+  - DOMAIN-SUFFIX,madsrevolution.net
+  - DOMAIN-SUFFIX,mathjournals.org
+  - DOMAIN-SUFFIX,mdpi.com
+  - DOMAIN-SUFFIX,mpg.de
+  - DOMAIN-SUFFIX,msp.org
+  - DOMAIN-SUFFIX,myilibrary.com
+  - DOMAIN-SUFFIX,oecd-ilibrary.org
+  - DOMAIN-SUFFIX,osapublishing.org
+  - DOMAIN-SUFFIX,oup.com
+  - DOMAIN-SUFFIX,ovid.com
+  - DOMAIN-SUFFIX,projecteuclid.org
+  - DOMAIN-SUFFIX,proquest.com
+  - DOMAIN-SUFFIX,rsc.org
+  - DOMAIN-SUFFIX,sagepub.com
+  - DOMAIN-SUFFIX,sciencemag.org
+  - DOMAIN-SUFFIX,scopus.com
+  - DOMAIN-SUFFIX,siam.org
+  - DOMAIN-SUFFIX,spiedigitallibrary.org
+  - DOMAIN-SUFFIX,springernature.com
+  - DOMAIN-SUFFIX,tandfonline.com
+  - DOMAIN-SUFFIX,un.org
+  - DOMAIN-SUFFIX,uni-bielefeld.de
+  - DOMAIN-SUFFIX,webofknowledge.com
+  - DOMAIN-SUFFIX,westlaw.com
+  - DOMAIN-SUFFIX,wiley.com
+  - DOMAIN-SUFFIX,worldbank.org
+  - DOMAIN-SUFFIX,worldscientific.com
